{
    "name": "GameInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "c8156569-a462-45d9-a8ad-043f0e2c8c2f",
            "actions": [
                {
                    "name": "LeftMouseClick",
                    "type": "Button",
                    "id": "83ed453b-b921-4117-9660-ea791ab1355f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouseClick",
                    "type": "Button",
                    "id": "22b62937-478f-4c4d-abb5-97c3f320c453",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "9f7db5d2-f682-463c-8144-7365fc16a1ac",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "85fe3a41-a39b-49ca-95c0-522588077569",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecc6dc61-ef91-40f6-8b57-8a0586874c2b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3422032-b96b-4240-b5b0-32aefb5d6165",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}